fix: Don't let home text overflow

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -23,7 +23,7 @@
     }
   
     > h2 {
-      font-size: 1.4rem;
+      font-size: 1.3rem;
       font-weight: 300;
       margin: 0.2rem 0;
       height: 2.4rem;
@@ -37,8 +37,8 @@
         align-items: center;
 
         > #google-g {
-          width: 1.4rem;
-          height: 1.4rem;
+          width: 1.3rem;
+          height: 1.3rem;
         }
       }
     }
